# chimera-invisible-ai-defender

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  requirements.txt  setup.py
.github/workflows/: python.yml
behavior_monitor/: Cargo.toml
behavior_monitor/src/: anomaly_detector.rs  file_monitor.rs  lib.rs  process_monitor.rs
behavior_monitor/tests/: integration_tests.rs
config/: config.yaml
control_channel/: Cargo.toml
control_channel/src/: lib.rs
ddos_simulator/: Cargo.toml
ddos_simulator/src/: lib.rs
firewall_engine/: Cargo.toml
firewall_engine/src/: ai_interface.rs  grpc_service.rs  lib.rs  rule_engine.rs  traffic_analyzer.rs
firewall_engine/tests/: integration_tests.rs
modules/: behavior_monitor.py  ddos_sim.py  firewall.py  network_forensics.py  stealth_loader.py
network_forensics/: Cargo.toml
network_forensics/src/: dns_resolver.rs  lib.rs  packet_analyzer.rs  traceback.rs
network_forensics/tests/: integration_tests.rs
python/chimera/: __init__.py
python/chimera/ai_firewall/: __init__.py  main.py  rl_agent.py  rule_generator.py  traffic_processor.py
stealth_loader/: Cargo.toml
stealth_loader/src/: crypto.rs  lib.rs  persistence.rs  platform.rs  usb_monitor.rs
stealth_loader/tests/: integration_tests.rs
tests/: test_firewall.py
