[workspace]
members = [
    "stealth_loader",
    "firewall_engine",
    "behavior_monitor"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chimera Research Team <research@chimera-lab.local>"]
license = "MIT"
repository = "https://github.com/chimera-lab/invisible-ai-defender"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pcap = "1.0"