[package]
name = "behavior_monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# File system monitoring
notify = "6.1"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.27"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"