[package]
name = "firewall_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
# pyo3.workspace = true  # Disabled for compatibility

# Networking
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Removed problematic firewall dependencies for safety

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
tokio-test = "0.4"